--- a/SVG Converter Light/SVG Converter Light.4dbase/Plugins/SVG Converter Light.bundle/Contents/Info.plist
+++ b/SVG Converter Light/SVG Converter Light.4dbase/Plugins/SVG Converter Light.bundle/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SVG2PDF</string>
+	<string>SVG Converter Light</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.4D.4DPlugin.miyako.SVGConverterLight</string>
 	<key>CFBundleInfoDictionaryVersion</key>
